Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -269,29 +269,29 @@
     // Quiz variables
     const questions = [
         {
-            question: "What is her most favv food in the world?",
-            options: ["golgappa.", "tacos.", "pizza.", "you."],
+            question: "What is her most favv thing in the world?",
+            options: ["TayTay.", "tacos.", "jewlry.", "you."],
             answer: 3
         },
         {
-            question: "If she says 'I'm fine', what does she really mean?",
-            options: ["Everything is fine.", "She's upset.", "She's tired.", "She's hungry."],
+            question: "If she says 'I'm fine, leave it' what should you do?",
+            options: ["Everything is fine so dw.", "make her smile and manao", "sit in silence and stare at each other wordless.", "skip and watch brainrot."],
             answer: 1
         },
         {
-            question: "How do you fix a bad mood?",
-            options: ["Give your lame ass advice.", "Ignore her and let her cry.", "Get some flowers.", "Apologize and explain."],
+            question: "How *should* you fix her bad mood?",
+            options: ["Give your lame ass advice.", "Ignore her and let her cry.", "Get her flowers and food.", "Apologize and over-explain."],
             answer: 2
         },
         {
             question: "What's the one thing you've been meaning to do but haven't done yet?",
-            options: ["make spinach ravioli.", "buy a digicam.", "take her to mumbai.", "finish watching TS documentary."],
+            options: ["make spinach ravioli.", "buy a digicam for her.", "take her to mumbai.", "finish watching TS documentary."],
             correctAnswers: [0,1, 2,3], 
     	multi: true
         },
         {
             question: "What should you NEVER forget?",
-            options: ["brushing your teeth.", "going to work.", "daily gm messages.", "eating."],
+            options: ["brushing your teeth.", "going to work.", "her daily gummorning messages.", "eating."],
             answer: 2
         },
         {
@@ -301,7 +301,7 @@
         },
         {
             question: "How to make her smile?",
-            options: ["sit and share memes.", "you dont know.", "send her food.", "call and talk for a while."],
+            options: ["sit and share lame memes.", "you dont know.", "'drink water'", "call her and talk for a while."],
             answer: 3
         },
         {
@@ -310,13 +310,13 @@
             answer: 2
         },
         {
-            question: "How to cheer her after a tough day?",
-            options: ["Listen patiently.", "Give advice.", "Distract her.", "Get on a flight and see her!"],
-            answer: 3
+            question: "Things you should make a big deal about?",
+            options: ["her not drinking water.", "small lil fights that we have.", "EVERY single occassion like bday, anniversary, VDay.", "you dont wanna make a big deal about anything"],
+            answer: 2
         },
         {
             question: "What's the best way to say 'I love you'?",
-            options: ["Keep saying it often.", "Remember small things.", "Give her expensive gifts.", "Love bomb her."],
+            options: ["Keep saying it often.", "Do the small things that matter everyday.", "Give her expensive gifts once a while.", "Love bomb her."],
             answer: 1
         }
     ];
@@ -553,3 +553,4 @@ surpriseBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
